--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,10 @@
 	<body class="page__body">
 		<div class="site-container">
 			@include('partials/header.html')
-			<main class="main">@include('partials/hero.html')</main>
+			<main class="main">
+				@include('partials/hero.html')
+				@include('partials/advantages.html')
+			</main>
 			@include('partials/footer.html')
 		</div>
 	</body>
