--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
 			<main class="main">
 				@include('partials/hero.html')
 				@include('partials/advantages.html')
+				@include('partials/shop.html')
 			</main>
 			@include('partials/footer.html')
 		</div>
