--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 				@include('partials/hero.html')
 				@include('partials/advantages.html')
 				@include('partials/shop.html') @include('partials/reviews.html')
+				@include('partials/products.html')
 			</main>
 			@include('partials/footer.html')
 		</div>
