reviews buttons update

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 				@include('partials/advantages.html')
 				@include('partials/shop.html') @include('partials/reviews.html')
 				@include('partials/products.html')
+				@include('partials/making.html')
 			</main>
 			@include('partials/footer.html')
 		</div>
