cabinets section create

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
 				@include('partials/shop.html') @include('partials/reviews.html')
 				@include('partials/products.html')
 				@include('partials/making.html')
+				@include('partials/cabinets.html')
 			</main>
 			@include('partials/footer.html')
 		</div>
