subscribe + details section

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,8 @@
 				@include('partials/products.html')
 				@include('partials/making.html')
 				@include('partials/cabinets.html')
+				@include('partials/subscribe.html')
+				@include('partials/details.html')
 			</main>
 			@include('partials/footer.html')
 		</div>
